Bug 740719 - Fix b2g-gonk shutdown hang. r=cjones